--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -35,6 +35,14 @@
             <artifactId>allure-testng</artifactId>
             <version>2.32.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.12</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
