--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -42,6 +42,17 @@
             <version>2.0.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>6.0.0</version>
+        </dependency>
 
     </dependencies>
     <build>
